# cs5220_final_project

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  common.h  dataset_1000.csv  decision_tree_benchmark.py  generate_dataset.py  gpu.cu  gpu_temp.cu  init-openmp  job-gpu  job-gpu-iterative  job-serial  main.cu  parallel.cu  parallel_iterative.cu  random_dataset.py  random_forest_benchmark.py  serial.cu  util.cpp  util.h  visualize_predictions.py
datasets/: random_1000.csv  random_10000.csv  random_100000.csv  spiral_1000.csv  spiral_10000.csv  spiral_150.csv
